syntax = "proto3";

package auth;

// Login from view-node
message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token  = 2;
  string role   = 3;
  string name   = 4;
  string message = 5;
}

// For other services 
message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid   = 1;
  int32 userId = 2;
  string role  = 3;
  string name  = 4;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}
